# pre-commit-pr-auto-fix

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml
src/: foo.py
